@@ -5,6 +5,9 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.Lists;
 import org.apache.http.HttpStatus;
 import org.slf4j.helpers.MessageFormatter;
+import uk.gov.hmcts.reform.hmc.client.datastore.model.ElasticSearch;
+import uk.gov.hmcts.reform.hmc.client.datastore.model.Query;
+import uk.gov.hmcts.reform.hmc.client.datastore.model.Terms;
 import uk.gov.hmcts.reform.hmc.client.hmi.ListingReasonCode;
 import uk.gov.hmcts.reform.hmc.data.ActualAttendeeIndividualDetailEntity;
 import uk.gov.hmcts.reform.hmc.data.ActualHearingDayEntity;
@@ -37,6 +40,7 @@ import uk.gov.hmcts.reform.hmc.data.ReasonableAdjustmentsEntity;
 import uk.gov.hmcts.reform.hmc.data.RequiredFacilitiesEntity;
 import uk.gov.hmcts.reform.hmc.data.RequiredLocationsEntity;
 import uk.gov.hmcts.reform.hmc.data.UnavailabilityEntity;
+import uk.gov.hmcts.reform.hmc.domain.model.enums.HearingStatus;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.LinkType;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.ListAssistCaseStatus;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.PutHearingStatus;
@@ -76,6 +80,7 @@ import uk.gov.hmcts.reform.hmc.model.UnavailabilityDow;
 import uk.gov.hmcts.reform.hmc.model.UnavailabilityRanges;
 import uk.gov.hmcts.reform.hmc.model.UpdateHearingRequest;
 import uk.gov.hmcts.reform.hmc.model.hmi.Entity;
+import uk.gov.hmcts.reform.hmc.service.common.DefaultObjectMapperService;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -85,9 +90,11 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.IntStream;
 
 import static uk.gov.hmcts.reform.hmc.constants.Constants.CANCELLATION_REQUESTED;
 import static uk.gov.hmcts.reform.hmc.constants.Constants.CREATE_HEARING_REQUEST;
+import static uk.gov.hmcts.reform.hmc.constants.Constants.ELASTIC_QUERY_DEFAULT_SIZE;
 import static uk.gov.hmcts.reform.hmc.constants.Constants.HMC;
 import static uk.gov.hmcts.reform.hmc.constants.Constants.HMI;
 import static uk.gov.hmcts.reform.hmc.constants.Constants.POST_HEARING_STATUS;
@@ -99,7 +106,9 @@ public class TestingUtil {
     public static final String CASE_REFERENCE = "1111222233334444";
     public static final String INVALID_CASE_REFERENCE = "1111222233334445";
     public static final List<String> CANCELLATION_REASON_CODES = List.of("test 1", "test 2");
-    public static Long ID = 2000000000L;
+    public static final Long ID = 2000000000L;
+
+    private static DefaultObjectMapperService objectMapperService = new DefaultObjectMapperService(new ObjectMapper());
 
     private TestingUtil() {
     }
@@ -343,6 +352,26 @@ public class TestingUtil {
         return hearingEntity;
     }
 
+    public static HearingEntity createHearingEntity() {
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(1L);
+        hearingEntity.setStatus(POST_HEARING_STATUS);
+        hearingEntity.setLinkedOrder(1L);
+        CaseHearingRequestEntity caseHearingRequestEntity = createCaseHearingRequestEntity(hearingEntity.getId());
+        caseHearingRequestEntity.setHearingParties(List.of(hearingPartyEntityOrg(), hearingPartyEntityInd()));
+        hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntity));
+        hearingEntity.setHearingResponses(createHearingResponseEntities());
+        return hearingEntity;
+    }
+
+    public static HearingEntity createHearingEntity(Long hearingId) {
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(hearingId);
+        hearingEntity.setHearingResponses(createHearingResponseEntities());
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
+        return hearingEntity;
+    }
+
     public static HearingEntity hearingEntityWithLinkDetails() {
         HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(1L);
@@ -537,7 +566,6 @@ public class TestingUtil {
     }
 
     public static CaseDetails getValidCaseDetails() {
-
         CaseDetails caseDetails = new CaseDetails();
         caseDetails.setHmctsServiceCode("TEST");
         caseDetails.setCaseRef(CASE_REFERENCE);
@@ -611,7 +639,7 @@ public class TestingUtil {
         hearingEntity.setId(ID);
         hearingEntity.setIsLinkedFlag(Boolean.TRUE);
         entity.setCaseHearingID(ID);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
         entity.setVersionNumber(1);
         hearingEntity.setIsLinkedFlag(true);
         hearingEntity.setLinkedGroupDetails(getLinkedGroupDetails());
@@ -620,7 +648,7 @@ public class TestingUtil {
         entity.setCaseReference("12345");
         entity.setHearingType("Some hearing type");
         entity.getHearing().setHearingResponses(List.of(hearingResponseEntities()));
-        entity.getHearing().getHearingResponses().get(0)
+        entity.getHearing().getHearingResponses().getFirst()
             .setHearingDayDetails(List.of(hearingDayDetailsEntities()));
         entity.setHearingChannels(hearingChannelsEntity());
         return entity;
@@ -673,7 +701,7 @@ public class TestingUtil {
         HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(ID);
         entity1.setCaseHearingID(ID);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
         entity1.setHearing(hearingEntity);
         entity1.setHmctsServiceCode("TEST");
         entity1.setCaseReference("12345");
@@ -802,9 +830,9 @@ public class TestingUtil {
     public static HearingEntity getCaseHearingsEntity(PartyType partyType) {
         HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(ID);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
         hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
-        if (partyType.getLabel() == PartyType.IND.getLabel()) {
+        if (partyType.getLabel().equals(PartyType.IND.getLabel())) {
             hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyOrg()));
         } else {
             hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyInd()));
@@ -816,7 +844,7 @@ public class TestingUtil {
     public static HearingEntity getCaseHearingsEntity() {
         HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(ID);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
         hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
         hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyOrg()));
 
@@ -859,7 +887,7 @@ public class TestingUtil {
         caseHearingRequestEntity.setInterpreterBookingRequiredFlag(true);
         caseHearingRequestEntity.setOwningLocationId("locationId");
         caseHearingRequestEntity.setCaseRestrictedFlag(true);
-        caseHearingRequestEntity.setCaseSlaStartDate(LocalDate.of(2000, 01, 01));
+        caseHearingRequestEntity.setCaseSlaStartDate(LocalDate.of(2000, 1, 1));
         caseHearingRequestEntity.setHearingParties(List.of(
             hearingPartyEntitySetReference("reference2"),
             hearingPartyEntitySetReference("reference"),
@@ -871,7 +899,7 @@ public class TestingUtil {
         return hearingEntity;
     }
 
-    public static HearingEntity getHearingsEntityForHearingActualsIndividual() {
+    public static HearingEntity getHearingsEntityForSortOrderCheck() {
         HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(ID);
         hearingEntity.setStatus("HEARING_REQUESTED");
@@ -892,7 +920,56 @@ public class TestingUtil {
         caseHearingRequestEntity.setInterpreterBookingRequiredFlag(true);
         caseHearingRequestEntity.setOwningLocationId("locationId");
         caseHearingRequestEntity.setCaseRestrictedFlag(true);
-        caseHearingRequestEntity.setCaseSlaStartDate(LocalDate.of(2000, 01, 01));
+        caseHearingRequestEntity.setCaseSlaStartDate(LocalDate.of(2000, 1, 1));
+        caseHearingRequestEntity.setHearingParties(List.of(hearingPartyEntityInd()));
+        caseHearingRequestEntity.setCaseCategories(caseCategoriesEntities());
+
+        ActualHearingEntity actualHearingEntity = actualHearingEntity(PartyType.IND);
+        actualHearingEntity.setActualHearingDay(createActualHearingDayEntityList(LocalDate.now().plusDays(5)));
+
+        hearingEntity.getHearingResponses().get(0).setActualHearingEntity(actualHearingEntity);
+        List<HearingDayDetailsEntity> hearingDayDetailsEntityList =
+            new ArrayList<>(hearingEntity.getLatestHearingResponse().get().getHearingDayDetails());
+
+        HearingDayDetailsEntity hearingDayDetailsEntity1 = createHearingDayDetailsEntity();
+        HearingDayDetailsEntity hearingDayDetailsEntity2 = createHearingDayDetailsEntity();
+        HearingDayDetailsEntity hearingDayDetailsEntity3 = createHearingDayDetailsEntity();
+        HearingDayDetailsEntity hearingDayDetailsEntity4 = createHearingDayDetailsEntity();
+        HearingDayDetailsEntity hearingDayDetailsEntity5 = createHearingDayDetailsEntity();
+
+        // add unordered to the list
+        hearingDayDetailsEntityList.add(hearingDayDetailsEntity1);
+        hearingDayDetailsEntityList.add(hearingDayDetailsEntity5);
+        hearingDayDetailsEntityList.add(hearingDayDetailsEntity2);
+        hearingDayDetailsEntityList.add(hearingDayDetailsEntity4);
+        hearingDayDetailsEntityList.add(hearingDayDetailsEntity3);
+
+        hearingEntity.getHearingResponses().get(0).setHearingDayDetails(hearingDayDetailsEntityList);
+        return hearingEntity;
+    }
+
+    public static HearingEntity getHearingsEntityForHearingActualsIndividual() {
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(ID);
+        hearingEntity.setStatus(HearingStatus.HEARING_REQUESTED.name());
+        hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
+        hearingEntity.getCaseHearingRequests().add(caseHearingRequestEntityWithPartyInd());
+
+        CaseHearingRequestEntity caseHearingRequestEntity = hearingEntity.getLatestCaseHearingRequest();
+        caseHearingRequestEntity.setVersionNumber(1);
+        caseHearingRequestEntity.setCaseHearingID(ID);
+        caseHearingRequestEntity.setHearingType("hearingType");
+        caseHearingRequestEntity.setHmctsServiceCode("serviceCode");
+        caseHearingRequestEntity.setCaseReference("caseRef");
+        caseHearingRequestEntity.setExternalCaseReference("extCaseRef");
+        caseHearingRequestEntity.setCaseUrlContextPath("contextPath");
+        caseHearingRequestEntity.setHmctsInternalCaseName("caseName");
+        caseHearingRequestEntity.setPublicCaseName("publicCaseName");
+        caseHearingRequestEntity.setAdditionalSecurityRequiredFlag(true);
+        caseHearingRequestEntity.setInterpreterBookingRequiredFlag(true);
+        caseHearingRequestEntity.setOwningLocationId("locationId");
+        caseHearingRequestEntity.setCaseRestrictedFlag(true);
+        caseHearingRequestEntity.setCaseSlaStartDate(LocalDate.of(2000, 1, 1));
         caseHearingRequestEntity.setHearingParties(List.of(hearingPartyEntityInd()));
         caseHearingRequestEntity.setCaseCategories(caseCategoriesEntities());
 
@@ -905,7 +982,7 @@ public class TestingUtil {
         entity.setActualHearingType("hearingType");
         entity.setHearingResultType(HearingResultType.ADJOURNED);
         entity.setHearingResultReasonType("resultReason");
-        entity.setHearingResultDate(LocalDate.of(2000, 01, 01));
+        entity.setHearingResultDate(LocalDate.of(2000, 1, 1));
         entity.setActualHearingDay(List.of(actualHearingDayEntity(partyType)));
         entity.setActualHearingIsFinalFlag(true);
         return entity;
@@ -922,11 +999,34 @@ public class TestingUtil {
 
     public static ActualHearingDayEntity actualHearingDayEntity(PartyType partyType) {
         ActualHearingDayEntity entity = new ActualHearingDayEntity();
-        entity.setHearingDate(LocalDate.of(2000, 01, 01));
+        entity.setHearingDate(LocalDate.of(2000, 1, 1));
         entity.setStartDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
         entity.setEndDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
         entity.setActualHearingDayPauses(List.of(actualHearingDayPausesEntity()));
         entity.setActualHearingParty(List.of(actualHearingPartyEntity(partyType)));
+        return entity;
+    }
+
+    public static List<ActualHearingDayPausesEntity> createActualHearingDayPausesEntityList() {
+        List<ActualHearingDayPausesEntity> actualHearingDayPausesEntities = new ArrayList<>();
+        actualHearingDayPausesEntities.add(createActualHearingDayPausesEntity(
+            LocalDateTime.now().plusDays(19), LocalDateTime.now().plusDays(19).withHour(13).withMinute(30)));
+        actualHearingDayPausesEntities.add(createActualHearingDayPausesEntity(
+            LocalDateTime.now().plusDays(17), LocalDateTime.now().plusDays(17).withHour(15).withMinute(45)));
+        actualHearingDayPausesEntities.add(createActualHearingDayPausesEntity(
+            LocalDateTime.now().plusDays(18), LocalDateTime.now().plusDays(18).withHour(12).withMinute(15)));
+        actualHearingDayPausesEntities.add(createActualHearingDayPausesEntity(
+            LocalDateTime.now().plusDays(15), LocalDateTime.now().plusDays(15).withHour(9).withMinute(0)));
+        actualHearingDayPausesEntities.add(createActualHearingDayPausesEntity(
+            LocalDateTime.now().plusDays(16), LocalDateTime.now().plusDays(16).withHour(11).withMinute(15)));
+        return actualHearingDayPausesEntities;
+    }
+
+    public static ActualHearingDayPausesEntity createActualHearingDayPausesEntity(LocalDateTime pauseDateTime,
+                                                                                  LocalDateTime resumeDateTime) {
+        ActualHearingDayPausesEntity entity = new ActualHearingDayPausesEntity();
+        entity.setPauseDateTime(pauseDateTime);
+        entity.setResumeDateTime(resumeDateTime);
         return entity;
     }
 
@@ -943,6 +1043,30 @@ public class TestingUtil {
         entity.setPartyId("1");
         entity.setActualPartyRoleType("roleType");
         entity.setDidNotAttendFlag(false);
+        entity.setActualAttendeeIndividualDetail(actualAttendeeIndividualDetailEntity(partyType));
+        entity.setActualPartyRelationshipDetail(List.of(actualPartyRelationshipDetailEntity(entity)));
+        return entity;
+    }
+
+    public static List<ActualHearingPartyEntity> createActualHearingPartyEntityList() {
+        List<ActualHearingPartyEntity> actualHearingPartyEntities = new ArrayList<>();
+        actualHearingPartyEntities.add(createActualHearingPartyEntity(4L, "party4", "roleType4", false, PartyType.ORG));
+        actualHearingPartyEntities.add(createActualHearingPartyEntity(2L, "party2", "roleType2", false, PartyType.ORG));
+        actualHearingPartyEntities.add(createActualHearingPartyEntity(6L, "party6", "roleType6", false, PartyType.ORG));
+        actualHearingPartyEntities.add(createActualHearingPartyEntity(5L, "party5", "roleType5", true, PartyType.IND));
+        actualHearingPartyEntities.add(createActualHearingPartyEntity(1L, "party1", "roleType1", true, PartyType.IND));
+        actualHearingPartyEntities.add(createActualHearingPartyEntity(3L, "party3", "roleType3", true, PartyType.IND));
+        return actualHearingPartyEntities;
+    }
+
+    public static ActualHearingPartyEntity createActualHearingPartyEntity(Long id, String partyId, String roleType,
+                                                                          boolean didNotAttendFlag,
+                                                                          PartyType partyType) {
+        ActualHearingPartyEntity entity = new ActualHearingPartyEntity();
+        entity.setActualPartyId(id);
+        entity.setPartyId(partyId);
+        entity.setActualPartyRoleType(roleType);
+        entity.setDidNotAttendFlag(didNotAttendFlag);
         entity.setActualAttendeeIndividualDetail(actualAttendeeIndividualDetailEntity(partyType));
         entity.setActualPartyRelationshipDetail(List.of(actualPartyRelationshipDetailEntity(entity)));
         return entity;
@@ -973,17 +1097,17 @@ public class TestingUtil {
         return entity;
     }
 
-    public static HearingResponseEntity hearingResponseEntity(Integer version, Integer requestVersion,
-                                                              LocalDateTime requestTimestamp,
-                                                              List<HearingDayDetailsEntity> hearingDayDetailsEntities) {
+    public static HearingResponseEntity hearingResponseEntity(int requestVersion, int responseId,
+                                                LocalDateTime requestTimestamp,
+                                                              List<HearingDayDetailsEntity> hearingDayDetailsList) {
         HearingResponseEntity entity = new HearingResponseEntity();
         entity.setRequestVersion(requestVersion);
         entity.setRequestTimeStamp(requestTimestamp);
-        entity.setHearingResponseId(2L);
+        entity.setHearingResponseId((long) responseId);
         entity.setListingStatus("Fixed");
         entity.setListingCaseStatus(ListAssistCaseStatus.CASE_CREATED.name());
         entity.setCancellationReasonType("Cancelled Reason 1");
-        entity.setHearingDayDetails(hearingDayDetailsEntities);
+        entity.setHearingDayDetails(hearingDayDetailsList);
         return entity;
     }
 
@@ -1013,12 +1137,137 @@ public class TestingUtil {
         return entity;
     }
 
-    public static HearingDayDetailsEntity hearingDayDetailsEntity(LocalDateTime startDateTime) {
+    public static List<CaseHearingRequestEntity> createMultipleCaseHearingRequestEntities() {
+        List<CaseHearingRequestEntity> entities = new ArrayList<>();
+        IntStream.range(0, 10).forEach(
+            id -> entities.add(createCaseHearingRequestEntity(ID + id)));
+
+        return entities;
+    }
+
+    private static CaseHearingRequestEntity createCaseHearingRequestEntity(Long hearingId) {
+        CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
+        HearingEntity hearingEntity = createHearingEntity(hearingId);
+        hearingEntity.setHearingResponses(createHearingResponseEntities());
+        entity1.setCaseHearingID(hearingId);
+        entity1.setHearing(hearingEntity);
+        entity1.setVersionNumber(1);
+        entity1.setHmctsServiceCode("TEST");
+        entity1.setCaseReference("12345");
+        entity1.setHearingType("Some hearing type");
+        return entity1;
+    }
+
+    public static List<HearingResponseEntity>  createHearingResponseEntities() {
+        List<HearingResponseEntity> entities = new ArrayList<>();
+        for (int i = 0; i < 20; i++) {
+            entities.add(hearingResponseEntity(1, 1, LocalDateTime.now(), createHearingDayDetailsEntityList()));
+        }
+        return entities;
+    }
+
+    public static List<HearingDayDetailsEntity> createHearingDayDetailsEntityList() {
+        List<HearingDayDetailsEntity> entities = new ArrayList<>();
+        LocalDateTime startDateTime = LocalDateTime.now().plusDays(30);
+        for (int i = 0; i < 20; i++) {
+            entities.add(createHearingDayDetailsEntity(i, startDateTime.minusMinutes(i * 3)));
+        }
+        return entities;
+    }
+
+    public static HearingDayDetailsEntity createHearingDayDetailsEntity() {
+        HearingDayDetailsEntity entity = new HearingDayDetailsEntity();
+        entity.setStartDateTime(LocalDateTime.now());
+        entity.setEndDateTime(LocalDateTime.now().plusHours(2));
+        entity.setRoomId("roomId");
+        entity.setVenueId("venueId");
+
+        HearingAttendeeDetailsEntity attendee1 = createHearingAttendeeDetailsEntity(1L,
+                                             "partySubChannelC", "reference", entity);
+        HearingAttendeeDetailsEntity attendee2 = createHearingAttendeeDetailsEntity(2L,
+                                                "partySubChannelA", "party2", entity);
+        HearingAttendeeDetailsEntity attendee3 = createHearingAttendeeDetailsEntity(3L,
+                                             "partySubChannelB", "reference", entity);
+        HearingAttendeeDetailsEntity attendee4 = createHearingAttendeeDetailsEntity(4L,
+                                                "partySubChannelA", "party4", entity);
+        HearingAttendeeDetailsEntity attendee5 = createHearingAttendeeDetailsEntity(5L,
+                                                "partySubChannelB", "party5", entity);
+        HearingAttendeeDetailsEntity attendee6 = createHearingAttendeeDetailsEntity(6L,
+                                                "partySubChannelC", "party6", entity);
+        entity.setHearingAttendeeDetails(List.of(attendee1, attendee2, attendee3, attendee4,attendee5, attendee6));
+
+        return entity;
+    }
+
+    public static HearingDayDetailsEntity createHearingDayDetailsEntity(int id, LocalDateTime startDateTime) {
         HearingDayDetailsEntity entity = new HearingDayDetailsEntity();
         entity.setStartDateTime(startDateTime);
-        entity.setEndDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
-        entity.setVenueId("venue1");
-        entity.setRoomId("room1");
+        entity.setEndDateTime(startDateTime.plusHours(2));
+        entity.setVenueId("venue" + id);
+        entity.setRoomId("room" + id);
+        entity.setHearingAttendeeDetails(createHearingAttendeeDetailsEntityList(entity));
+        entity.setHearingDayPanel(createHearingDayPanelEntityList(entity));
+        return entity;
+    }
+
+    public static HearingAttendeeDetailsEntity createHearingAttendeeDetailsEntity(Long id,
+                                                                                  String partySubChannelType,
+                                                                                  String partyId,
+                                                                     HearingDayDetailsEntity hearingDayDetailsEntity) {
+        HearingAttendeeDetailsEntity attendee = new HearingAttendeeDetailsEntity();
+        attendee.setId(id);
+        attendee.setHearingDayDetails(hearingDayDetailsEntity);
+        attendee.setPartySubChannelType(partySubChannelType);
+        attendee.setPartyId(partyId);
+        return attendee;
+    }
+
+    public static HearingAttendeeDetailsEntity createHearingAttendeeDetailsEntity(
+        int id, HearingDayDetailsEntity hearingDayDetailsEntity) {
+        HearingAttendeeDetailsEntity entity = new HearingAttendeeDetailsEntity();
+        entity.setId((long) id);
+        entity.setPartyId("partyid" + id);
+        entity.setPartySubChannelType("subchanneltype" + id);
+        entity.setCreatedDateTime(LocalDateTime.now());
+        entity.setHearingDayDetails(hearingDayDetailsEntity);
+        return entity;
+    }
+
+    public static List<HearingAttendeeDetailsEntity> createHearingAttendeeDetailsEntityList(
+        HearingDayDetailsEntity hearingDayDetailsEntity) {
+        List<HearingAttendeeDetailsEntity> entities = new ArrayList<>();
+        for (int i = 0; i < 20; i++) {
+            entities.add(createHearingAttendeeDetailsEntity(i, hearingDayDetailsEntity));
+        }
+        return entities;
+    }
+
+    public static List<HearingDayPanelEntity> createHearingDayPanelEntityList(
+        HearingDayDetailsEntity hearingDayDetailsEntity) {
+        List<HearingDayPanelEntity> entities = new ArrayList<>();
+        for (int i = 0; i < 20; i++) {
+            entities.add(createHearingDayPanelEntity(i, hearingDayDetailsEntity));
+        }
+        return entities;
+    }
+
+    public static HearingDayPanelEntity createHearingDayPanelEntity(int id,
+                                                                    HearingDayDetailsEntity hearingDayDetailsEntity) {
+        HearingDayPanelEntity entity = new HearingDayPanelEntity();
+        entity.setId((long) id);
+        entity.setHearingDayDetails(hearingDayDetailsEntity);
+        entity.setPanelUserId("paneluser" + id);
+        entity.setIsPresiding(false);
+        return entity;
+    }
+
+    public static HearingDayPanelEntity createHearingDayPanelEntity(int id, String panelUserId, boolean isPresiding,
+                                                                    HearingDayDetailsEntity hearingDayDetailsEntity) {
+        HearingDayPanelEntity entity = new HearingDayPanelEntity();
+        entity.setId((long) id);
+        entity.setHearingDayDetails(hearingDayDetailsEntity);
+        entity.setPanelUserId(panelUserId);
+        entity.setIsPresiding(isPresiding);
         return entity;
     }
 
@@ -1032,7 +1281,6 @@ public class TestingUtil {
 
         return entity;
     }
-
 
     public static HearingPartyEntity hearingPartyEntityForClone() {
         HearingPartyEntity entity = new HearingPartyEntity();
@@ -1083,7 +1331,6 @@ public class TestingUtil {
 
     public static PartyRelationshipDetailsEntity partyRelationshipDetailsEntity(String targetTechPartyId,
                                                                                  String relationshipType) {
-
         HearingPartyEntity targetHearingPartyEntity = new HearingPartyEntity();
         targetHearingPartyEntity.setPartyReference(targetTechPartyId);
 
@@ -1123,6 +1370,34 @@ public class TestingUtil {
         entity1.setPanelUserRequirements(List.of(panelUserRequirementsEntity()));
         entity1.setPanelSpecialisms(List.of(panelSpecialismsEntity()));
         return entity1;
+    }
+
+    public static List<ActualHearingDayEntity> createActualHearingDayEntityList(LocalDate startDate) {
+        List<ActualHearingDayEntity> actualHearingDayEntityList = new ArrayList<>();
+        actualHearingDayEntityList.add(createActualHearingDayEntity(startDate,
+                                                                    startDate.atTime(15,30)));
+        actualHearingDayEntityList.add(createActualHearingDayEntity(startDate.plusDays(3),
+                                                                    startDate.plusDays(3).atTime(9,30)));
+        actualHearingDayEntityList.add(createActualHearingDayEntity(startDate.plusDays(1),
+                                                                    startDate.plusDays(1).atTime(11,0)));
+        actualHearingDayEntityList.add(createActualHearingDayEntity(startDate.plusDays(5),
+                                                                    startDate.plusDays(5).atTime(10,30)));
+        actualHearingDayEntityList.add(createActualHearingDayEntity(startDate.plusDays(4),
+                                                                    startDate.plusDays(4).atTime(9,0)));
+        actualHearingDayEntityList.add(createActualHearingDayEntity(startDate.plusDays(2),
+                                                                    startDate.plusDays(2).atTime(11,30)));
+        return actualHearingDayEntityList;
+    }
+
+    public static ActualHearingDayEntity createActualHearingDayEntity(LocalDate hearingDate,
+                                                                      LocalDateTime startDateTime) {
+        ActualHearingDayEntity entity = new ActualHearingDayEntity();
+        entity.setHearingDate(hearingDate);
+        entity.setStartDateTime(startDateTime);
+        entity.setEndDateTime(startDateTime.plusHours(2));
+        entity.setActualHearingDayPauses(createActualHearingDayPausesEntityList());
+        entity.setActualHearingParty(createActualHearingPartyEntityList());
+        return entity;
     }
 
     private static RequiredFacilitiesEntity requiredFacilitiesEntity() {
@@ -1168,7 +1443,7 @@ public class TestingUtil {
     }
 
 
-    private static List<PartyDetails> partyDetailsWith2Parties(boolean isCftOrganisationIdNull) {
+    public static List<PartyDetails> partyDetailsWith2Parties(boolean isCftOrganisationIdNull) {
         PartyDetails partyDetails1 = new PartyDetails();
         partyDetails1.setPartyID("P1");
         partyDetails1.setPartyType(PartyType.IND.getLabel());
@@ -1467,7 +1742,18 @@ public class TestingUtil {
         return linkedHearingStatusAuditEntity;
     }
 
+    public static String createSearchQuery(List<String> ccdCaseRefs) {
+        Terms terms = new Terms(ccdCaseRefs);
+        Query query = new Query(terms);
+        ElasticSearch searchObject = ElasticSearch.builder()
+            .query(query)
+            .build();
+        if (ccdCaseRefs.size() > ELASTIC_QUERY_DEFAULT_SIZE) {
+            searchObject.setSize(ccdCaseRefs.size());
+        }
+        return objectMapperService.convertObjectToJsonNode(searchObject).toString();
+    }
+
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper().findAndRegisterModules();
 
 }
-
